fixed weird spacing stuff

--- a/src/components/PhotoGallery.css
+++ b/src/components/PhotoGallery.css
@@ -1,7 +1,6 @@
 .subTitle {
   font-family: Isenheim, 'Times New Roman';
   font-size: 35px;
-  margin-bottom: -130px;
   margin-top: 45px;
   text-align: center;
 }
@@ -27,12 +26,11 @@
   justify-content: space-between;
   width: 85%;
   margin: 0 auto;
-  margin-top: 120px;
+  margin-top: 10px;
   margin-bottom: 50px;
 }
 .photo-wrapper {
   width: calc(33.33% - 10px);
-  margin-bottom: 20px;
   position: relative;
 }
 .photo-wrapper:nth-child(3n + 1) {
@@ -55,10 +53,7 @@
   padding: 10px;
   font-size: 14px;
   line-height: 1.5;
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  right: 0;
+  position: relative;
   display: flex;
   justify-content: center;
 }
